--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Language    : xxxxx xxx</li>
     </UL>
     <h2 >objectives</h2>
-    <p width=500px;>ing for a challenging role in a reputable organization to utilize my technical, database, and management skills for the growth of the organization as well as to enhance my knowledge about new and emerging trends in the IT sector.</p>
+    <p width=500px;>Looking for a challenging role in a reputable organization to utilize my technical, database, and management skills for the growth of the organization as well as to enhance my knowledge about new and emerging trends in the IT sector.</p>
     <h2>Qualification</h2>
 <ul>
     <li>ms word, excel ,power point, visual basic</li>
