--- a/index.html
+++ b/index.html
@@ -1,55 +1,85 @@
+<!DOCTYPE html>
 <html>
 <head>
-
-    <title>MY RESUME</title>
-    <style>
-        p {
-            width: 720px;
-        }
-    </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>jje.com</title>
+	<h1>news </h1>
+	<h2>news </h2>
+	<h3>news </h3>
+	<h4>news </h4>
+	<h5>news </h5>
+	<h6>news </h6>
+	<hr>
+	<!--this h1 for text size and opneingstart with < nd closing with /> -->
 </head>
 <body>
-    <table border ="1" align="center" width="60%">
-       <th><H1 align="center" margin-top=30px;>WELCOME MY RESUME !</H1></th><tr></tr>
-    <tr><th  align="left"><h3> JEEVANANTHAM M</h3>
-    <p>Owner at : raju.com</p>
-    Mobile No : +1646466872 <br><br>
-    Email Address : kannanu@gmail.com <br><br>
+<h1>news </h1>
+	<p><b><i><u> Give this video a Thumbs Up </u></i></b></body>👍</p>
+	<!-- <b> , <i>, <u> bold , italic , under line -->
 
-    <h2>PERSONAL INFORMATION</h2>
-    <UL>
-        <li>Father Name : xxxxx xxx</li>
-        <li>DOB         : xxxxx xxx</li>
-        <li>Nationality : xxxxx xxx</li>
-        <li>Marit Status: xxxxx xxx</li>
-        <li>Address     : xxxxx xxx</li>
-        <li>Language    : xxxxx xxx</li>
-    </UL>
-    <h2 >objectives</h2>
-    <p width=500px;>Looking for a challenging role in a reputable organization to utilize my technical, database, and management skills for the growth of the organization as well as to enhance my knowledge about new and emerging trends in the IT sector.</p>
-    <h2>Qualification</h2>
-<ul>
-    <li>ms word, excel ,power point, visual basic</li>
-    <li>SEO ,webdesigning, power point ,etc..,</li>
-    <li>marketing , video editing ,hr</li>
-</ul>
-     <table border="1" align="left">
-        <tr><th>examination</th>
-        <th>division</th>
-        <th>Board/unvercity</th></tr>
-        <tr><th>B.Sc(Compuetrb science)</th>
-            <th>1st</th>
-            <th>Bharathiyar Univercity</th></tr>
-        <tr><th>B.Com pa</th>
-            <th>3rd</th>
-            <th>Anna univercity</th></tr>
-        <tr><th>MSC Computer science</th>
-            <th>2nd </th>
-            <th>periyar unvercity</th></tr>
-    </table><br><br><br><br>
-    <h1 align=left; margin left =0;>objectives</h1>
-    </th>
-       </tr>
-    </table>
+<p>Share & Subscribe  for More Videos😉</p>
+
+<p>Show your support to recover the channel<a href="https://www.youtube.com/watch?v=U9waKqmxuuY" target="blank">💖</a></p>
+
+<br>Click the bell icon to get notified for new videos 🔔
+
+<br>feel free to drop your doubts in the comment section 📳
+
+<p>Buy me a Coffee☕ and support: http://bit.ly/2Hf1aUC
+	<hr>
+	<ul> 
+		<li>unorder list</li>
+		<li>unorder list</li>
+		<li>unorder list</li>
+		<li>unorder list</li>
+	</ul>
+	<ol>
+		<li>order list</li>
+		<li>order list</li>
+		<li>order list</li>
+		<li>order list</li>
+</ol>
+<!-- <hr> for line <ul> key for unorder list
+-->
+<table>
+	<head>
+		<th><u>name</th>
+		<th><u>class</th>
+		<th><u>roll no</th>
+	</head>
+	<body>
+	<tr>	
+		<td>rzahu</td>
+		<td>rzahu00@gmail.com</td>
+		<td>1234568</td>
+	</tr>
+	</body>
+	<tr>	<!-- tr means row wise filling -->
+		<td>rzahu</td>
+		<td>rzahu00@gmail.com</td>
+		<td>1234568</td>
+	</tr>
+	</body>
+	<tr>	
+		<td>rzahu</td>
+		<td>rzahu00@gmail.com</td>
+		<td>1234568</td>
+	</tr>
+	</body>
+</table>
+connect with me here: 
+<br><br><br><br>
+<form action="next.php" method="POST">
+	<label>First Name </label>
+	<input type="text" name="name">
+	<br><br>
+	<label>Phone number </label>
+	<input type="number" name="pho">
+	</form>
+	<br>
+	<br>
+	<img src="j.jpg.JPG" alt="my image"width="300" height="300"> 
+</p>
 </body>
 </html>
